# esp32-meteo

./: CMakeLists.txt  README.md  font_range.txt  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  buttons.cpp  buttons.h  common.h  cpu_info.cpp  cpu_info.h  flash.cpp  flash.h  fonts.h  idf_component.yml  logo_image.c  lvgl  main.cpp  nv_storage.cpp  nv_storage.h  prediction.cpp  prediction.h  predictions_list.h  rgb.cpp  rgb.h  sensor.cpp  sensor.h  spi_flash.cpp  spi_flash.h  updater.cpp  updater.h  utils.cpp  utils.h  wifi.cpp  wifi.h
main/data/: predictions.txt
main/event_bus/: Events.cmake  cache.cpp  cache.h  event_bus.cpp  event_bus.h  event_bus_c.h  events.cpp  events.h  scheduler.cpp  scheduler.h
main/event_bus/workers/: bme_sensor_reader.cpp  bme_sensor_reader.h  forecast_fetcher.cpp  forecast_fetcher.h  ntp_updater.cpp  ntp_updater.h  prediction_reader.cpp  prediction_reader.h  time_generator.cpp  time_generator.h  weather_fetcher.cpp  weather_fetcher.h
main/fonts/: noto_15.c  noto_24.c  noto_36.c  noto_60.c  noto_64.c  noto_66.c
main/http_server/: http_server.cpp  http_server.h
main/http_server/static/: index.html
main/io/: bme_sensor.cpp  bme_sensor.h  button.cpp  button.h
main/states/: States.cmake  state.cpp  state.h  state_manager.cpp  state_manager.h  state_subsystem.cpp  state_subsystem.h
main/states/connectivity/: connected_state.cpp  connected_state.h  connection_test_state.cpp  connection_test_state.h  provisioning_state.cpp  provisioning_state.h
main/states/ui/: ui_connected_state.cpp  (+9 more)
main/ui/: Ui.cmake  current_weather.cpp  current_weather.h  display.cpp  display.h  forecast.cpp  forecast.h  globals.h  logo.cpp  logo.h  time_label.cpp  time_label.h  ui.cpp  ui.h
main/wifi/: iwifi_connector.h  wifi_manager.cpp  wifi_manager.h
(+94 files in other folders)
